--- a/configs/model/dit_small_text8.yaml
+++ b/configs/model/dit_small_text8.yaml
@@ -1,9 +1,9 @@
-_target_: model.ddit.DDit
+_target_: model.dit.DiT
 hidden_size   : 768
 n_heads       : 12
 cond_dim      : 128
 dropout       : 0.0
-n_blocks      : 14
-length        : 128
+n_blocks      : 12
+length        : 256
 input_dim     : ${tokens}
 output_dim    : ${tokens}
